--- a/cardio_tangerine.html
+++ b/cardio_tangerine.html
@@ -36,7 +36,7 @@
                 <a class="dropdown-item" href="chest_101.html">Chest</a>
                 <a class="dropdown-item" href="back_101.html">Back</a>
                 <a class="dropdown-item" href="legs_101.html">Legs</a>
-                <a class="dropdown-item" href="shoulderes_101.html">Shoulders</a>
+                <a class="dropdown-item" href="shoulders_101.html">Shoulders</a>
                 <a class="dropdown-item" href="arms_101.html">Arms</a>
                 <a class="dropdown-item" href="abs_101.html">Abdominals</a>
               </div>
@@ -52,7 +52,7 @@
               <div class="dropdown-menu">
                 <a class="dropdown-item" href="treadmill.html">Treadmill</a>
                 <a class="dropdown-item" href="exercise_bike.html">Exercise Bike</a>
-                <a class="dropdown-item" href="ellipptical.html">Elliptical</a>
+                <a class="dropdown-item" href="elliptical.html">Elliptical</a>
                 <a class="dropdown-item" href="rowing.html">Rowing Machine</a>
                 <a class="dropdown-item" href="stairmaster.html">StairMaster</a>
               </div>
