--- a/chest_102.html
+++ b/chest_102.html
@@ -36,7 +36,7 @@
                 <a class="dropdown-item" href="chest_101.html">Chest</a>
                 <a class="dropdown-item" href="back_101.html">Back</a>
                 <a class="dropdown-item" href="legs_101.html">Legs</a>
-                <a class="dropdown-item" href="shoulderes_101.html">Shoulders</a>
+                <a class="dropdown-item" href="shoulders_101.html">Shoulders</a>
                 <a class="dropdown-item" href="arms_101.html">Arms</a>
                 <a class="dropdown-item" href="abs_101.html">Abdominals</a>
               </div>
@@ -52,7 +52,7 @@
               <div class="dropdown-menu">
                 <a class="dropdown-item" href="treadmill.html">Treadmill</a>
                 <a class="dropdown-item" href="exercise_bike.html">Exercise Bike</a>
-                <a class="dropdown-item" href="ellipptical.html">Elliptical</a>
+                <a class="dropdown-item" href="elliptical.html">Elliptical</a>
                 <a class="dropdown-item" href="rowing.html">Rowing Machine</a>
                 <a class="dropdown-item" href="stairmaster.html">StairMaster</a>
               </div>
@@ -83,10 +83,10 @@
       <br><br><br>
       <div class="row">
         <div class="col-md-4">
-          <a class="btn btn-light btn-outline-primary btn-lg btn-block disabled" href="chest_101.html" role="button">Chest 101</a>
+          <a class="btn btn-light btn-outline-primary btn-lg btn-block" href="chest_101.html" role="button">Chest 101</a>
         </div>
         <div class="col-md-4">
-          <a class="btn btn-light btn-outline-primary btn-lg btn-block" href="chest_102.html" role="button">Chest 102</a>
+          <a class="btn btn-light btn-outline-primary btn-lg btn-block disabled" href="chest_102.html" role="button">Chest 102</a>
         </div>
         <div class="col-md-4">
           <a class="btn btn-light btn-outline-primary btn-lg btn-block" href="chest_103.html" role="button">Chest 103</a>
@@ -98,17 +98,26 @@
       <div class="row justify-content-md-center">
         <div class="col-md-10">
           <div class="card border-light mb-3">
+            <div class="card-header text-center h5">Flat Dumbbell Bench Press</div>
+            <div class="card-body text-center">
+              <img src="flat_db_bench.jpg" class="img-fluid" alt="Flat Dumbell Bench Press">
+              <p><i>(6 sets | 12, 10, 8, 6, 2-10)</i></p>
+              <p><u>Info</u>: There will be 6 sets. The first three five sets will be focused on increasing the weight 10-15% each set while lowering the repetitions by two each time. For the last set, increase the weight another 15-20%. This will be a drop set where after completing the a challenging 2 reps, drop the weight 35-50% and complete another 10 reps.</p>
+              <p><u>Form</u>: Grip both dumbbells and hold them shoulder width apart.. Draw your shoulder blades backward. Bring the dumbells in a straight down motion and bring them so that they almost touch the anterior deltoid. Turn your hands slightly so that your arms are at about a 45 degree angle. Touch the dumbbells together at the top. Keep a slight arch in your back but your glutes on the bench.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="row justify-content-md-center">
+        <div class="col-md-10">
+          <div class="card border-light mb-3">
             <div class="card-header text-center h5">Flat Barbell Bench Press</div>
             <div class="card-body text-center">
               <img src="flat_bb_bench.jpg" class="img-fluid" alt="Responsive image">
-              <p><i>(4 sets | 15, 12, 12, 10-8)</i></p>
-              <p><u>Info</u>: There will be 4 sets. The first three sets will be focused on high repetitions and good form.
-                Increase the weight about 15-20% after the first set. For the last set, increase the weight another 15-20%.
-                This will be a drop set where after completing the first 10 reps, you will drop the weight about 30-45% and
-                complete 8 more reps.</p>
-              <p><u>Form</u>: Grab the bar just outside of shoulder width. Draw your shoulder blades backward. Bring the
-                bar in a straight down motion and touch the bar to your chest around your sternum. Keep arms at about a 45
-                degree angle from your sides in order to keep pressure off your shoulders.</p>
+              <p><i>(4 sets | 10-5, 10-5, 8-5, 8-5)</i></p>
+              <p><u>Info</u>: There will be 4 sets, each a drop set. Each set will be focused on lifting a heavier weight for 10 reps during the first part of the set and dropping the weight 30-50% for the second part of the set to complete five more reps. Attempt to use the same weight for each set, even after the decrease in reps the third set.</p>
+              <p><u>Form</u>: Grab the bar just outside of shoulder width. Draw your shoulder blades backward. Bring the bar in a straight down motion and touch the bar to your chest around your sternum. Keep arms at about a 45 degree angle from your sides in order to keep pressure off your shoulders. Keep a slight arch in your back but your glutes on the bench.</p>
             </div>
           </div>
         </div>
@@ -117,33 +126,14 @@
       <div class="row justify-content-md-center">
         <div class="col-md-10">
           <div class="card border-light mb-3">
-            <div class="card-header text-center h5">Incline Barbell Bench Press</div>
+            <div class="card-header text-center h5">Incline Barbell Bench Press X Incline Dumbbell Fly</div>
             <div class="card-body text-center">
               <img src="incline_bb_bench.jpeg" class="img-fluid" alt="Responsive image">
-              <p><i>(4 sets | 15, 12, 12, 10-8)</i></p>
-              <p><u>Info</u>: There will be 4 sets. The first three sets will be focused on high repetitions and good
-                form. The last set will be a drop set where after completing the first 10 reps, you will drop the
-                weight about 30% and complete 8 more reps.</p>
-              <p><u>Form</u>: Grab the bar just outside of shoulder width. Draw your shoulder blades backward.
-                Bring the bar in a straight down motion and touch the bar to your chest around the upper part of your
-                chest. Keep arms at about a 45 degree angle from your sides in order to keep pressure off your shoulders.</p>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="row justify-content-md-center">
-        <div class="col-md-10">
-          <div class="card border-light mb-3">
-            <div class="card-header text-center h5">Incline Dumbbell Bench Press</div>
-            <div class="card-body text-center">
-              <img src="incline_db_bench.jpeg" class="img-fluid" alt="Responsive image">
-              <p><i>(4 sets | 15, 15, 12, 12)</i></p>
-              <p><u>Info</u>: There will be 4 sets. All 4 will be focused on high repetitions with an emphasis on good form.
-                Increase the weight after the second set about 10-15%.</p>
-              <p><u>Form</u>: Grab the dumbells and hold them above you touching. Draw your shoulder blades backward. Bring
-                the bar in a straight down motion and bend your elbows just past 90 degrees. Keep arms at about a 45 degree
-                angle from your sides in order to keep pressure off your shoulders.</p>
+              <img src="incline_db_fly.jpg" alt="Incline Dumbbell Fly">
+              <p><i>(3 sets | 12x10, 10x10, 8x10)</i></p>
+              <p><u>Info</u>: There will be 3 sets, each a superset. First, you will perform the incline barbell press for the first part of the set with an emphasis on higher repetitions with good form. You will then superset with an incline dumbbell fly, with an emphasis on higher repetitions with good form. You will add weight to the bench press after each set but keep the dumbbell weight the same.</p>
+              <p><u>Form</u>: Grab the bar just outside of shoulder width. Draw your shoulder blades backward. Bring the bar in a straight down motion and touch the bar to your chest just below your collarbone. Keep arms at about a 45 degree angle from your sides in order to keep pressure off your shoulders. Keep a slight arch in your back but your glutes on the bench.</p>
+              <p>Turn your hands inward and grip the dumbells so that they are touching in the middle above you. Bring the dumbbells out in a smooth motion to stretch the chest but keep a bend at the elbow in order to take pressure off the shoulder.</p>
             </div>
           </div>
         </div>
@@ -156,10 +146,8 @@
             <div class="card-body text-center">
               <img src="dips.jpeg" class="img-fluid" alt="Responsive image">
               <p><i>(2 sets | AMRAP)</i></p>
-              <p><u>Info</u>: There will be 2 sets. Both will be focused on burning out your muscles and performing as
-                many reps as possible with good form.</p>
-              <p><u>Form</u>: Grab the bars and hold yourself straight up. Lean forward slightly and lower yourself so
-                that your arms bend to about 90 degrees.</p>
+              <p><u>Info</u>: There will be 2 sets. Both will be focused on burning out your muscles and performing as many reps as possible with good form.</p>
+              <p><u>Form</u>: Grip the bars about shoulder width apart. With a slight lean forward, bend the arms to lower your body and stretch the chest until your arms are about at a 90 degree angle. Push yourself back up.</p>
             </div>
           </div>
         </div>
@@ -168,19 +156,18 @@
       <div class="row justify-content-md-center">
         <div class="col-md-10">
           <div class="card border-light mb-3">
-            <div class="card-header text-center h5">Push-Ups</div>
+            <div class="card-header text-center h5">High Cable Fly X Low Cable Fly</div>
             <div class="card-body text-center">
-              <img src="pushups.jpeg" class="img-fluid" alt="Responsive image">
-              <p><i>(1 set | AMRAP)</i></p>
-              <p><u>Info</u>: There will be 1 set. It will focus on taking your chest to complete exhaustion. Perform
-                as many reps as possible. If you don’t have enough energy to perform standard push-ups, do push-ups on
-                your knees.</p>
-              <p><u>Form</u>: Put your arms just outside shoulder width and keep a straight back. Lower yourself to
-                the ground and push yourself back up.</p>
+              <img src="high_cable_fly.jpg" class="img-fluid" alt="Responsive image">
+              <img src="low_cable_fly.webp" class="img-fluid" alt="Responsive image">
+              <p><i>(3 sets | 15x15, 15x15, AMRAPxAMRAP)</i></p>
+              <p><u>Info</u>: There will be 3 sets, each a superset. First, you will perform the high cable fly for the first part of the set with an emphasis on higher repetitions and control. You will then superset with the low cable fly, with an emphasis on higher repetitions and control. The last set you will perform as many reps as possible for both exercises.</p>
+              <p><u>Form</u>: For high cable flys, place the cable settings high and with straight arms, bring your hands together to squeeze the chest around the waist area.</p>
+              <p>For low cable flys, place the cable settings low and with straight arms, bring your hands together in front of the upper chest.</p>
             </div>
           </div>
         </div>
       </div>
     </div>
-
+    
 </html>
