--- a/cardio_tangerine.html
+++ b/cardio_tangerine.html
@@ -5,7 +5,7 @@
       <meta charset="utf-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewpoint" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-      <title>Tagnerine Fit</title>
+      <title>Tangerine Fit</title>
       <!-- BOOTSTRAP -->
       <link href="css/bootstrap.min.css" rel="stylesheet">
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
