updated UI for weightlifting portions and treadmill and exercise bike

--- a/shoulders_102.html
+++ b/shoulders_102.html
@@ -1,107 +1,162 @@
-<html>
-    <head>
-        <title>Tangerine Fit</title>
-        <link rel="stylesheet" type="text/css" href="css_tangerine.css"/>
-    </head>
-    <body>
-        <div id="container">
-            <div id="header">
-                <b id="name"><font size = "+5">TF</font></b>
-                <ul>
-                    <li><a class="" href="home_tangerine.html">Home</a></li>
-                    <li><a class="selected" href="weightlifting_tangerine.html">Weightlifting</a></li>
-                    <li><a class="" href="cardio_tangerine.html">Cardio</a></li>
-                    <li><a class="" href="hiit_tangerine.html">HIIT</a></li>
-                    <li><a class="" href="about_tangerine.html">About</a></li>
-                </ul>
-            </div>
-            <div>
-                <div id="nav">
-                    <h2 align="center" id="header_nav">Workout Routines</h2>
-                    <ul id="nav_ul">
-                        <h3><ah class="" href="">Chest</ah></h3>
-                        <li><a class="" href="chest_101.html">-  Chest 101</a></li>
-                        <li><a class="" href="chest_102.html">-  Chest 102</a></li>
-                        <li><a class="" href="chest_103.html">-  Chest 103</a></li>
-                        <h3><ah class="" href="">Back</ah></h3>
-                        <li><a class="" href="back_101.html">-  Back 101</a></li>
-                        <li><a class="" href="back_102.html">-  Back 102</a></li>
-                        <li><a class="" href="back_103.html">-  Back 103</a></li>
-                        <h3><ah class="" href="">Legs</ah></h3>
-                        <li><a class="" href="legs_101.html">-  Legs 101</a></li>
-                        <li><a class="" href="legs_102.html">-  Legs 102</a></li>
-                        <li><a class="" href="legs_103.html">-  Legs 103</a></li>
-                        <h3><ah class="" href="">Shoulders</ah></h3>
-                        <li><a class="" href="shoulders_101.html">-  Shoulders 101</a></li>
-                        <li><a class="" href="shoulders_102.html">-  Shoulders 102</a></li>
-                        <li><a class="" href="shoulders_103.html">-  Shoulders 103</a></li>
-                        <h3><ah class="" href="">Arms</ah></h3>
-                        <li><a class="" href="arms_101.html">-  Arms 101</a></li>
-                        <li><a class="" href="arms_102.html">-  Arms 102</a></li>
-                        <li><a class="" href="arms_103.html">-  Arms 103</a></li>
-                        <h3><ah class="" href="">Abdominals</ah></h3>
-                        <li><a class="" href="abs_101.html">-  Abdominals 101</a></li>
-                        <li><a class="" href="abs_102.html">-  Abdominals 102</a></li>
-                        <li><a class="" href="abs_103.html">-  Abdominals 103</a></li>
-                    </ul>
-                </div>
-                <div id="main_info">
-                    <div id="main_info_header">
-                        <h2 align="center">Shoulders 102</h2>
-                    </div>
-                    <div id="routine">
-                        <div id="picture">
-                            <img src="shoulder_press_seated_db.jpg" alt="Seated Dumbbell Shoulder Press">
-                            <img src="shrugs_db.jpg" alt="Shrugs">
-                        </div>
-                        <div id="routine_exercise">
-                            <h4><exerciseHead>Seated Dumbbell Shoulder Press X Shrugs</exerciseHead></h4>
-                            <p><i>(5 sets | 15x15, 12x12, 10x10, 12x12, 15x15)</i></p>
-                            <p><u>Info</u>: There will be 5 sets. Increase weight for both exercise the first 3 sets and decrease the weight back down the last 3 (pyramid). Increase/decrease the weight 5-10%. </p>
-                            <p><u>Form</u>: For the shoulder press, keep an arched back sitting straight up, bring the dumbbells up so that they are straight above you with a straight arm. Bend your elbows outward until your elbows are just under a 90 degree angle and then press the weights back up so that they touch above your head.</p>
-                            <p>For the shrugs, grab two dumbells and hold them at your sides. With a straight arm, shrug your shoulders upward and slightly backward to focus the traps. Hold them at the top and the lower your shoulders slowly.</p>
-                        </div>
-                        <div id="picture">
-                            <img src="lateral_raise_cb.jpeg" alt="Cable Lateral Raise">
-                            <img src="rear_lateral_raise_cb.jpg" alt="Cable Rear Lateral Raise">
-                        </div>
-                        <div id="routine_exercise">
-                            <h4><exerciseHead>Cable Lateral Raises X Cable Rear Delt Raises</exerciseHead></h4>
-                            <p><i>(4 sets | 15x15, 15x15, 12x12, 12x12)</i></p>
-                            <p><u>Info</u>: There will be 4 sets. Focus . Perform the lateral raises followed by the rear delt raises directly afterwards. After 2 sets increase the weight 5-10% and decrease the repetitions. </p>
-                            <p><u>Form</u>: For the lateral raises, grab the handle on the cable machine (one side at a time) and hold it at your sides. With a straight arm, raise the handle to your sides until your body forms half a “T” shape and then lower the handle slowly to the starting position.</p>
-                            <p>For the rear lateral raises, bend over so your torso is parallel with the ground. Grip the handle at the bottom of the cables. With straight arms, extend them out to your sides so that at the top your arm is straight and are parallel with the ground and perpendicular with your body.</p>
-                        </div>
-                        <div id="picture">
-                            <img src="lateral_raise_db.jpg" alt="Dumbbell Lateral Raise">
-                            <img src="rear_lateral_raise_db.jpg" alt="Dumbell Rear Lateral Raise">
-                        </div>
-                        <div id="routine_exercise">
-                            <h4><exerciseHead>Dumbbell Lateral Raise X Dumbbell Rear Lateral Raise</exerciseHead></h4>
-                            <p><i>(4 sets | 15x15, 15x15, 12x12, 12x12)</i></p>
-                            <p><u>Info</u>: There will be 4 sets. Use a weight you can focus on control with. Perform the lateral raises followed by the rear delt raises directly afterwards. After 2 sets increase the weight 5-10% and decrease the repetitions.  </p>
-                            <p><u>Form</u>: For the lateral raises, grab two dumbbells and hold them at your sides. With straight arms, raise the dumbbells to your sides until your body forms a “T” shape and then lower the dumbbells slowly to the starting position.</p>
-                            <p>For the rear lateral raises, bend over so your torso is parallel with the ground. Let the dumbbells dead hang in front of you. With straight arms, extend them out to your sides so that at the top your arms are straight and are parallel with the ground and perpendicular with your body.</p>
-                        </div>
-                        <div id="picture">
-                            <img src="face_pulls.jpg" alt="Face-Pulls">
-                            <img src="shrugs_db.jpg" alt="Shrugs">
-                        </div>
-                        <div id="routine_exercise">
-                            <h4><exerciseHead>Face Pull X Shrugs</exerciseHead></h4>
-                            <p><i>(4 sets | 15x15, 15x15, 12x12, 12x12)</i></p>
-                            <p><u>Info</u>: There will be 4 sets. Use a weight you can focus on control with. Perform the lateral raises followed by the rear delt raises directly afterwards. After 2 sets increase the weight 5-10% and decrease the repetitions.  </p>
-                            <p><u>Form</u>: For the face pulls, place the cables so they are eye level with you. With a rope attachment, pull the handles toward your forehead and separate your hands as it begins to come toward you. Keep your upper arms parallel to the ground and make a double-bicep flex motion with your upper arms.</p>
-                            <p>For the shrugs, grab two dumbells and hold them at your sides. With a straight arm, shrug your shoulders upward and slightly backward to focus the traps. Hold them at the top and the lower your shoulders slowly.</p>
-                        </div>
-                    </div>
-                    
-                </div>
-            </div>
+<!doctype html>
+<html lang="en">
 
-            <div id = "footer">
-                Copyright &copy; 2019 Tangerine Fit.
+    <head>
+      <meta charset="utf-8">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge">
+      <meta name="viewpoint" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+      <title>Tagnerine Fit</title>
+      <!-- BOOTSTRAP -->
+      <link href="css/bootstrap.min.css" rel="stylesheet">
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.6/umd/popper.min.js"></script>
+      <script src="js/bootstrap.min.js"></script>
+    </head>
+
+    <!-- NAVIGATION BAR -->
+    <nav class="navbar navbar-expand-lg fixed-top navbar-light" style="background-color: #fd7e14;">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <a class="navbar-brand text-light" href="home_tangerine.html">Tangerine Fit</a>
+      <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
+        <ul class="navbar-nav">
+          <!-- HOME BUTTON -->
+          <li class="nav-item">
+            <a class="btn btn-light" role="button" href="home_tangerine.html">Home</a>
+          </li>
+          <!-- WEIGHTLIFTING DROPDOWN BUTTON -->
+          <li class="nav-item dropdown">
+            <div class="btn-group">
+              <a class="btn btn-light" href="weightlifting_tangerine.html" role="button">Weightlifting</a>
+              <button type="button" class="btn btn-light dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <span class="sr-only">Toggle Dropdown</span>
+              </button>
+            <div class="dropdown-menu">
+                <a class="dropdown-item" href="chest_101.html">Chest</a>
+                <a class="dropdown-item" href="back_101.html">Back</a>
+                <a class="dropdown-item" href="legs_101.html">Legs</a>
+                <a class="dropdown-item" href="shoulders_101.html">Shoulders</a>
+                <a class="dropdown-item" href="arms_101.html">Arms</a>
+                <a class="dropdown-item" href="abs_101.html">Abdominals</a>
+              </div>
             </div>
+          </li>
+          <!-- CARDIO DROPDOWN BUTTON -->
+          <li class="nav-item dropdown">
+            <div class="btn-group">
+              <a class="btn btn-light" href="cardio_tangerine.html" role="button">Cardio</a>
+              <button type="button" class="btn btn-light dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <span class="sr-only">Toggle Dropdown</span>
+              </button>
+              <div class="dropdown-menu">
+                <a class="dropdown-item" href="treadmill.html">Treadmill</a>
+                <a class="dropdown-item" href="exercise_bike.html">Exercise Bike</a>
+                <a class="dropdown-item" href="elliptical.html">Elliptical</a>
+                <a class="dropdown-item" href="rowing.html">Rowing Machine</a>
+                <a class="dropdown-item" href="stairmaster.html">StairMaster</a>
+              </div>
+            </div>
+          </li>
+          <!-- HIIT DROPDOWN BUTTON -->
+          <li class="nav-item dropdown">
+            <div class="btn-group">
+              <a class="btn btn-light" href="hiit_tangerine.html" role="button">HIIT</a>
+              <button type="button" class="btn btn-light dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <span class="sr-only">Toggle Dropdown</span>
+              </button>
+              <div class="dropdown-menu">
+                <a class="dropdown-item" href="hiit_strength_101.html">Strength</a>
+                <a class="dropdown-item" href="hiit_fl_101.html">Fat Loss</a>
+              </div>
+            </div>
+          </li>
+          <!-- ABOUT BUTTON -->
+          <li class="nav-item">
+            <a class="btn btn-light" role="button" href="about_tangerine.html">About</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+    <!--  GRID BUTTONS -->
+    <div class="container">
+      <br><br><br>
+      <div class="row">
+        <div class="col-md-4">
+          <a class="btn btn-light btn-outline-primary btn-lg btn-block" href="shoulders_101.html" role="button">Shoulders 101</a>
         </div>
-    </body>
+        <div class="col-md-4">
+          <a class="btn btn-light btn-outline-primary btn-lg btn-block disabled" href="shoulders_102.html" role="button">Shoulders 102</a>
+        </div>
+        <div class="col-md-4">
+          <a class="btn btn-light btn-outline-primary btn-lg btn-block" href="shoulders_103.html" role="button">Shoulders 103</a>
+        </div>
+      </div>
+    </div><br><br>
+    <!-- BODY -->
+    <div class="container">
+      <div class="row justify-content-md-center">
+        <div class="col-md-10">
+          <div class="card border-light mb-3">
+            <div class="card-header text-center h5">Seated Dumbbell Shoulder Press X Shrugs</div>
+            <div class="card-body text-center">
+              <img src="shoulder_press_seated_db.jpg" class="img-fluid" alt="Responsive image">
+              <img src="shrugs_db.jpg" class="img-fluid" alt="Responsive image">
+              <p><i>(5 sets | 15x15, 12x12, 10x10, 12x12, 15x15)</i></p>
+              <p><u>Info</u>: There will be 5 sets. Increase weight for both exercise the first 3 sets and decrease the weight back down the last 3 (pyramid). Increase/decrease the weight 5-10%.</p>
+              <p><u>Form</u>: For the shoulder press, keep an arched back sitting straight up, bring the dumbbells up so that they are straight above you with a straight arm. Bend your elbows outward until your elbows are just under a 90 degree angle and then press the weights back up so that they touch above your head.</p>
+              <p>For the shrugs, grab two dumbells and hold them at your sides. With a straight arm, shrug your shoulders upward and slightly backward to focus the traps. Hold them at the top and the lower your shoulders slowly.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="row justify-content-md-center">
+        <div class="col-md-10">
+          <div class="card border-light mb-3">
+            <div class="card-header text-center h5">Cable Lateral Raises X Cable Rear Delt Raises</div>
+            <div class="card-body text-center">
+              <img src="lateral_raise_cb.jpeg" class="img-fluid" alt="Responsive image">
+              <img src="rear_lateral_raise_cb.jpg" class="img-fluid" alt="Responsive image">
+              <p><i>(4 sets | 15x15, 15x15, 12x12, 12x12)</i></p>
+              <p><u>Info</u>:  There will be 4 sets. Focus . Perform the lateral raises followed by the rear delt raises directly afterwards. After 2 sets increase the weight 5-10% and decrease the repetitions.</p>
+              <p><u>Form</u>: For the lateral raises, grab the handle on the cable machine (one side at a time) and hold it at your sides. With a straight arm, raise the handle to your sides until your body forms half a “T” shape and then lower the handle slowly to the starting position.</p>
+              <p>For the rear lateral raises, bend over so your torso is parallel with the ground. Grip the handle at the bottom of the cables. With straight arms, extend them out to your sides so that at the top your arm is straight and are parallel with the ground and perpendicular with your body.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="row justify-content-md-center">
+        <div class="col-md-10">
+          <div class="card border-light mb-3">
+            <div class="card-header text-center h5">Dumbbell Lateral Raise X Dumbbell Rear Lateral Raise</div>
+            <div class="card-body text-center">
+              <img src="lateral_raise_db.jpg" class="img-fluid" alt="Responsive image">
+              <img src="rear_lateral_raise_db.jpg" class="img-fluid" alt="Responsive image">
+              <p><i>(4 sets | 15x15, 15x15, 12x12, 12x12)</i></p>
+              <p><u>Info</u>: There will be 4 sets. Use a weight you can focus on control with. Perform the lateral raises followed by the rear delt raises directly afterwards. After 2 sets increase the weight 5-10% and decrease the repetitions.</p>
+              <p><u>Form</u>: For the lateral raises, grab two dumbbells and hold them at your sides. With straight arms, raise the dumbbells to your sides until your body forms a “T” shape and then lower the dumbbells slowly to the starting position.</p>
+              <p>For the rear lateral raises, bend over so your torso is parallel with the ground. Let the dumbbells dead hang in front of you. With straight arms, extend them out to your sides so that at the top your arms are straight and are parallel with the ground and perpendicular with your body.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="row justify-content-md-center">
+        <div class="col-md-10">
+          <div class="card border-light mb-3">
+            <div class="card-header text-center h5">Face Pull X Shrugs</div>
+            <div class="card-body text-center">
+              <img src="face_pulls.jpg" class="img-fluid" alt="Responsive image">
+              <img src="shrugs_db.jpg" class="img-fluid" alt="Responsive image">
+              <p><i>(4 sets | 15x15, 15x15, 12x12, 12x12)</i></p>
+              <p><u>Info</u>: There will be 4 sets. Use a weight you can focus on control with. Perform the lateral raises followed by the rear delt raises directly afterwards. After 2 sets increase the weight 5-10% and decrease the repetitions.</p>
+              <p><u>Form</u>: For the face pulls, place the cables so they are eye level with you. With a rope attachment, pull the handles toward your forehead and separate your hands as it begins to come toward you. Keep your upper arms parallel to the ground and make a double-bicep flex motion with your upper arms.</p>
+              <p>For the shrugs, grab two dumbells and hold them at your sides. With a straight arm, shrug your shoulders upward and slightly backward to focus the traps. Hold them at the top and the lower your shoulders slowly.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
 </html>
