--- a/abs_102.html
+++ b/abs_102.html
@@ -1,91 +1,143 @@
-<html>
-    <head>
-        <title>Tangerine Fit</title>
-        <link rel="stylesheet" type="text/css" href="css_tangerine.css"/>
-    </head>
-    <body>
-        <div id="container">
-            <div id="header">
-                <b id="name"><font size = "+5">TF</font></b>
-                <ul>
-                    <li><a class="" href="home_tangerine.html">Home</a></li>
-                    <li><a class="selected" href="weightlifting_tangerine.html">Weightlifting</a></li>
-                    <li><a class="" href="cardio_tangerine.html">Cardio</a></li>
-                    <li><a class="" href="hiit_tangerine.html">HIIT</a></li>
-                    <li><a class="" href="about_tangerine.html">About</a></li>
-                </ul>
-            </div>
-            <div>
-                <div id="nav">
-                    <h2 align="center" id="header_nav">Workout Routines</h2>
-                    <ul id="nav_ul">
-                        <h3><ah class="" href="">Chest</ah></h3>
-                        <li><a class="" href="chest_101.html">-  Chest 101</a></li>
-                        <li><a class="" href="chest_102.html">-  Chest 102</a></li>
-                        <li><a class="" href="chest_103.html">-  Chest 103</a></li>
-                        <h3><ah class="" href="">Back</ah></h3>
-                        <li><a class="" href="back_101.html">-  Back 101</a></li>
-                        <li><a class="" href="back_102.html">-  Back 102</a></li>
-                        <li><a class="" href="back_103.html">-  Back 103</a></li>
-                        <h3><ah class="" href="">Legs</ah></h3>
-                        <li><a class="" href="legs_101.html">-  Legs 101</a></li>
-                        <li><a class="" href="legs_102.html">-  Legs 102</a></li>
-                        <li><a class="" href="legs_103.html">-  Legs 103</a></li>
-                        <h3><ah class="" href="">Shoulders</ah></h3>
-                        <li><a class="" href="shoulders_101.html">-  Shoulders 101</a></li>
-                        <li><a class="" href="shoulders_102.html">-  Shoulders 102</a></li>
-                        <li><a class="" href="shoulders_103.html">-  Shoulders 103</a></li>
-                        <h3><ah class="" href="">Arms</ah></h3>
-                        <li><a class="" href="arms_101.html">-  Arms 101</a></li>
-                        <li><a class="" href="arms_102.html">-  Arms 102</a></li>
-                        <li><a class="" href="arms_103.html">-  Arms 103</a></li>
-                        <h3><ah class="" href="">Abdominals</ah></h3>
-                        <li><a class="" href="abs_101.html">-  Abdominals 101</a></li>
-                        <li><a class="" href="abs_102.html">-  Abdominals 102</a></li>
-                        <li><a class="" href="abs_103.html">-  Abdominals 103</a></li>
-                    </ul>
-                </div>
-                <div id="main_info">
-                    <div id="main_info_header">
-                        <h2 align="center">Abdominals 102</h2>
-                    </div>
-                    <div id="routine">
-                        <div id="picture">
-                            <img src="sit_ups_decline_twist.jpg" alt="Decline Sit-Ups w/ Twist">
-                        </div>
-                        <div id="routine_exercise">
-                            <h4><exerciseHead>Decline Sit-Ups w/ Twist</exerciseHead></h4>
-                            <p><i>(3 sets |15, 12, 10)</i></p>
-                            <p><u>Info</u>: There will be 3 sets. Secure your feet into a decline bench and perform a sit up to target the abs with a twist at the top to target the obliques. Lower the amount of reps each set.</p>
-                            <p><u>Form</u>: Find a decline bench and secure your feet in the padding. Perform a sit-up, arching your back and then bending at the abdominals to sit up. At the top, twist to your left and then to your right in order to engage the obliques and then lower yourself back to starting position.</p>
-                        <div id="picture">
-                            <img src="leg_lifts_hanging.jpg" alt="Hanging Leg Raises">
-                        </div>
-                        <div id="routine_exercise">
-                            <h4><exerciseHead>Hanging Leg Raises</exerciseHead></h4>
-                            <p><i>(3 sets |15, 15, 15)</i></p>
-                            <p><i>*To make it easier, only lift the knees upward*</i></p>
-                            <p><u>Info</u>: There will be 3 sets. While hanging from a pullup bar, lift your legs outward to target the lower abs. Keep the reps the same throughout. </p>
-                            <p><u>Form</u>: Hang from a bar and slightly bend your arms and engage your lats in order to stay in place on the bar and not swing. Lift your legs upward and point them straight out, bending at the abdominals.</p>
-                        <div id="picture">
-                            <img src="sit_ups.jpg" alt="Sit ups">
-                            <img src="leg_lifts.jpg" alt="Leg Raises">
-                        </div>
-                        <div id="routine_exercise">
-                            <h4><exerciseHead>Sit-Ups X Leg Raises</exerciseHead></h4>
-                            <p><i>(3 sets |10x10, 10x10, 10x10)</i></p>
-                            <p><u>Info</u>: There will be 3 sets. Perform the sit-ups first and immediately follow them with leg raises. Keep reps constant throughout.</p>
-                            <p><u>Form</u>: For the sit ups lay on the floor but bend your knees. Arch your back and then sit up bending at the abdominals. </p>
-                            <p>For the leg raises, lay flat on the ground with your feet together. Keeping your hands on your abs, lift your legs up and point them straight in the air. When they are straight lift your glutes off the ground using your core.</p>
-                        </div>
-                    </div>
-                    
-                </div>
-            </div>
+<!doctype html>
+<html lang="en">
 
-            <div id = "footer">
-                Copyright &copy; 2019 Tangerine Fit.
+    <head>
+      <meta charset="utf-8">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge">
+      <meta name="viewpoint" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+      <title>Tangerine Fit</title>
+      <!-- BOOTSTRAP -->
+      <link href="css/bootstrap.min.css" rel="stylesheet">
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.6/umd/popper.min.js"></script>
+      <script src="js/bootstrap.min.js"></script>
+    </head>
+
+    <!-- NAVIGATION BAR -->
+    <nav class="navbar navbar-expand-lg fixed-top navbar-light" style="background-color: #fd7e14;">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <a class="navbar-brand text-light" href="home_tangerine.html">Tangerine Fit</a>
+      <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
+        <ul class="navbar-nav">
+          <!-- HOME BUTTON -->
+          <li class="nav-item">
+            <a class="btn btn-light" role="button" href="home_tangerine.html">Home</a>
+          </li>
+          <!-- WEIGHTLIFTING DROPDOWN BUTTON -->
+          <li class="nav-item dropdown">
+            <div class="btn-group">
+              <a class="btn btn-light" href="weightlifting_tangerine.html" role="button">Weightlifting</a>
+              <button type="button" class="btn btn-light dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <span class="sr-only">Toggle Dropdown</span>
+              </button>
+            <div class="dropdown-menu">
+                <a class="dropdown-item" href="chest_101.html">Chest</a>
+                <a class="dropdown-item" href="back_101.html">Back</a>
+                <a class="dropdown-item" href="legs_101.html">Legs</a>
+                <a class="dropdown-item" href="shoulders_101.html">Shoulders</a>
+                <a class="dropdown-item" href="arms_101.html">Arms</a>
+                <a class="dropdown-item" href="abs_101.html">Abdominals</a>
+              </div>
             </div>
+          </li>
+          <!-- CARDIO DROPDOWN BUTTON -->
+          <li class="nav-item dropdown">
+            <div class="btn-group">
+              <a class="btn btn-light" href="cardio_tangerine.html" role="button">Cardio</a>
+              <button type="button" class="btn btn-light dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <span class="sr-only">Toggle Dropdown</span>
+              </button>
+              <div class="dropdown-menu">
+                <a class="dropdown-item" href="treadmill.html">Treadmill</a>
+                <a class="dropdown-item" href="exercise_bike.html">Exercise Bike</a>
+                <a class="dropdown-item" href="elliptical.html">Elliptical</a>
+                <a class="dropdown-item" href="rowing.html">Rowing Machine</a>
+                <a class="dropdown-item" href="stairmaster.html">StairMaster</a>
+              </div>
+            </div>
+          </li>
+          <!-- HIIT DROPDOWN BUTTON -->
+          <li class="nav-item dropdown">
+            <div class="btn-group">
+              <a class="btn btn-light" href="hiit_tangerine.html" role="button">HIIT</a>
+              <button type="button" class="btn btn-light dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <span class="sr-only">Toggle Dropdown</span>
+              </button>
+              <div class="dropdown-menu">
+                <a class="dropdown-item" href="hiit_strength_101.html">Strength</a>
+                <a class="dropdown-item" href="hiit_fl_101.html">Fat Loss</a>
+              </div>
+            </div>
+          </li>
+          <!-- ABOUT BUTTON -->
+          <li class="nav-item">
+            <a class="btn btn-light" role="button" href="about_tangerine.html">About</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+    <!--  GRID BUTTONS -->
+    <div class="container">
+      <br><br><br>
+      <div class="row">
+        <div class="col-md-4">
+          <a class="btn btn-light btn-outline-primary btn-lg btn-block" href="abs_101.html" role="button">Abs 101</a>
         </div>
-    </body>
+        <div class="col-md-4">
+          <a class="btn btn-light btn-outline-primary btn-lg btn-block disabled" href="abs_102.html" role="button">Abs 102</a>
+        </div>
+        <div class="col-md-4">
+          <a class="btn btn-light btn-outline-primary btn-lg btn-block" href="abs_103.html" role="button">Abs 103</a>
+        </div>
+      </div>
+    </div><br><br>
+    <!-- BODY -->
+    <div class="container">
+      <div class="row justify-content-md-center">
+        <div class="col-md-10">
+          <div class="card border-light mb-3">
+            <div class="card-header text-center h5">Decline Sit-Ups w/ Twist</div>
+            <div class="card-body text-center">
+              <img src="sit_ups_decline_twist.jpg" class="img-fluid" alt="Responsive image">
+              <p><i>(3 sets |15, 12, 10)</i></p>
+              <p><u>Info</u>: There will be 3 sets. Secure your feet into a decline bench and perform a sit up to target the abs with a twist at the top to target the obliques. Lower the amount of reps each set.</p>
+              <p><u>Form</u>: Find a decline bench and secure your feet in the padding. Perform a sit-up, arching your back and then bending at the abdominals to sit up. At the top, twist to your left and then to your right in order to engage the obliques and then lower yourself back to starting position.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="row justify-content-md-center">
+        <div class="col-md-10">
+          <div class="card border-light mb-3">
+            <div class="card-header text-center h5">Hanging Leg Raises</div>
+            <div class="card-body text-center">
+              <img src="leg_lifts_hanging.jpg" class="img-fluid" alt="Responsive image">
+              <p><i>(3 sets |15, 15, 15)</i></p>
+              <p><i>*To make it easier, only lift the knees upward*</i></p>
+              <p><u>Info</u>: There will be 3 sets. While hanging from a pullup bar, lift your legs outward to target the lower abs. Keep the reps the same throughout.</p>
+              <p><u>Form</u>: Hang from a bar and slightly bend your arms and engage your lats in order to stay in place on the bar and not swing. Lift your legs upward and point them straight out, bending at the abdominals.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="row justify-content-md-center">
+        <div class="col-md-10">
+          <div class="card border-light mb-3">
+            <div class="card-header text-center h5">Sit-Ups X Leg Raises</div>
+            <div class="card-body text-center">
+              <img src="sit_ups.jpg" class="img-fluid" alt="Responsive image">
+              <img src="leg_lifts.jpg" class="img-fluid" alt="Responsive image">
+              <p><i>(3 sets |10x10, 10x10, 10x10)</i></p>
+              <p><u>Info</u>: There will be 3 sets. Perform the sit-ups first and immediately follow them with leg raises. Keep reps constant throughout.</p>
+              <p><u>Form</u>: For the sit ups lay on the floor but bend your knees. Arch your back and then sit up bending at the abdominals.</p>
+              <p>For the leg raises, lay flat on the ground with your feet together. Keeping your hands on your abs, lift your legs up and point them straight in the air. When they are straight lift your glutes off the ground using your core.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
 </html>
