--- a/arms_102.html
+++ b/arms_102.html
@@ -1,96 +1,147 @@
-<html>
-    <head>
-        <title>Tangerine Fit</title>
-        <link rel="stylesheet" type="text/css" href="css_tangerine.css"/>
-    </head>
-    <body>
-        <div id="container">
-            <div id="header">
-                <b id="name"><font size = "+5">TF</font></b>
-                <ul>
-                    <li><a class="" href="home_tangerine.html">Home</a></li>
-                    <li><a class="selected" href="weightlifting_tangerine.html">Weightlifting</a></li>
-                    <li><a class="" href="cardio_tangerine.html">Cardio</a></li>
-                    <li><a class="" href="hiit_tangerine.html">HIIT</a></li>
-                    <li><a class="" href="about_tangerine.html">About</a></li>
-                </ul>
-            </div>
-            <div>
-                <div id="nav">
-                    <h2 align="center" id="header_nav">Workout Routines</h2>
-                    <ul id="nav_ul">
-                        <h3><ah class="" href="">Chest</ah></h3>
-                        <li><a class="" href="chest_101.html">-  Chest 101</a></li>
-                        <li><a class="" href="chest_102.html">-  Chest 102</a></li>
-                        <li><a class="" href="chest_103.html">-  Chest 103</a></li>
-                        <h3><ah class="" href="">Back</ah></h3>
-                        <li><a class="" href="back_101.html">-  Back 101</a></li>
-                        <li><a class="" href="back_102.html">-  Back 102</a></li>
-                        <li><a class="" href="back_103.html">-  Back 103</a></li>
-                        <h3><ah class="" href="">Legs</ah></h3>
-                        <li><a class="" href="legs_101.html">-  Legs 101</a></li>
-                        <li><a class="" href="legs_102.html">-  Legs 102</a></li>
-                        <li><a class="" href="legs_103.html">-  Legs 103</a></li>
-                        <h3><ah class="" href="">Shoulders</ah></h3>
-                        <li><a class="" href="shoulders_101.html">-  Shoulders 101</a></li>
-                        <li><a class="" href="shoulders_102.html">-  Shoulders 102</a></li>
-                        <li><a class="" href="shoulders_103.html">-  Shoulders 103</a></li>
-                        <h3><ah class="" href="">Arms</ah></h3>
-                        <li><a class="" href="arms_101.html">-  Arms 101</a></li>
-                        <li><a class="" href="arms_102.html">-  Arms 102</a></li>
-                        <li><a class="" href="arms_103.html">-  Arms 103</a></li>
-                        <h3><ah class="" href="">Abdominals</ah></h3>
-                        <li><a class="" href="abs_101.html">-  Abdominals 101</a></li>
-                        <li><a class="" href="abs_102.html">-  Abdominals 102</a></li>
-                        <li><a class="" href="abs_103.html">-  Abdominals 103</a></li>
-                    </ul>
-                </div>
-                <div id="main_info">
-                    <div id="main_info_header">
-                        <h2 align="center">Arms 102</h2>
-                    </div>
-                    <div id="routine">
-                        <div id="picture">
-                            <img src="reverse_tricep_pushdown.jpg" alt="Reverse Tricep Pushdowns">
-                            <img src="tricep_pushdown.jpg" alt="Tricep Pushdowns">
-                        </div>
-                        <div id="routine_exercise">
-                            <h4><exerciseHead>Reverse Tricep Pushdown X Tricep Pushdowns</exerciseHead></h4>
-                            <p><i>(3 sets |10x10, 10x10, 10x10)</i></p>
-                            <p><u>Info</u>: There will be 3 sets. Focus on control and contraction. Keep the weight constant through all sets. This will be a mechanical drop set, meaning the weight and movement is the same but it will change to a stronger grip for the second part of the set. Perform the traditional pushdowns immediately after the set.</p>
-                            <p><u>Form</u>: For the reverse tricep pushdowns, attach a straight bar to the cable and grab it with your palms facing upward. Keeping your elbows at your sides and holding the bar straight in front of you, push the bar downward to fully extend your arm and squeeze the triceps.</p>
-                            <p>For the tricep pushdowns, attach a straight bar to the cable and grab it with your palms facing downward. Keeping your elbows at your sides and holding the bar straight in front of you, push the bar downward to fully extend your arm and squeeze the triceps.</p>
-                        </div>
-                        <div id="picture">
-                            <img src="curls_bb.jpg" alt="Barbell Curls">
-                            <img src="reverse_curl_bb.jpg" alt="Reverse Barbell Curls">
-                        </div>
-                        <div id="routine_exercise">
-                            <h4><exerciseHead>Barbell Curls X Reverse Barbell Curls</exerciseHead></h4>
-                            <p><i>(3 sets |10x10, 10x10, 10x10)</i></p>
-                            <p><u>Info</u>: There will be 3 sets. Focus on control and contraction. Keep the weight constant through all sets but decrease the weight 10-15% for the reverse barbell curls. Perform these immediately after the traditional curls.</p>
-                            <p><u>Form</u>: For the barbell curls, grab the bar about shoulder width apart with your palms facing outward. Keeping your elbows at your sides, bend at the elbow and bring the bar toward your chest and squeeze the bicep at the top.</p>
-                            <p>For the reverse barbell curls, grab the bar about shoulder width apart with your palms facing inward. Keeping your elbows at your sides, bend at the elbow and bring the bar toward your chest and squeeze the bicep at the top.</p>
-                        </div>
-                        <div id="picture">
-                            <img src="skullcrusher_ez.jpg" alt="EZ-Bar Skull Crushers">
-                            <img src="hammer_curls.jpg" alt="Dumbbell Hammer Curls">
-                        </div>
-                        <div id="routine_exercise">
-                            <h4><exerciseHead>EZ-Bar Skull Crushers X Dumbbell Hammer Curls</exerciseHead></h4>
-                            <p><i>(4 sets |12x12, 12x12, 10x10, 10x10)</i></p>
-                            <p><u>Info</u>: There will be 4 sets. Focus on control and contraction. Increase the weight and decrease the reps each set after the second set. Perform the hammer curls on both arms simultaneously and immediately after the skullcrushers.</p>
-                            <p><u>Form</u>: For the skull crushers, grab the easy curl bar on the closer portion of the bend. On a flat or incline bench, extend your arms so they are straight up. Keeping your elbows in place, lower the bar slightly above your forehead and the extend straight.</p>
-                            <p>For the hammer curls, grab the dumbells and hold them at your sides with your palms facing each other. Keeping your elbow at your side, curl the bar up and keep your palms facing each other.</p>
-                        </div>
-                    </div>
-                    
-                </div>
-            </div>
+<!doctype html>
+<html lang="en">
 
-            <div id = "footer">
-                Copyright &copy; 2019 Tangerine Fit.
+    <head>
+      <meta charset="utf-8">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge">
+      <meta name="viewpoint" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+      <title>Tangerine Fit</title>
+      <!-- BOOTSTRAP -->
+      <link href="css/bootstrap.min.css" rel="stylesheet">
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.6/umd/popper.min.js"></script>
+      <script src="js/bootstrap.min.js"></script>
+    </head>
+
+    <!-- NAVIGATION BAR -->
+    <nav class="navbar navbar-expand-lg fixed-top navbar-light" style="background-color: #fd7e14;">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <a class="navbar-brand text-light" href="home_tangerine.html">Tangerine Fit</a>
+      <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
+        <ul class="navbar-nav">
+          <!-- HOME BUTTON -->
+          <li class="nav-item">
+            <a class="btn btn-light" role="button" href="home_tangerine.html">Home</a>
+          </li>
+          <!-- WEIGHTLIFTING DROPDOWN BUTTON -->
+          <li class="nav-item dropdown">
+            <div class="btn-group">
+              <a class="btn btn-light" href="weightlifting_tangerine.html" role="button">Weightlifting</a>
+              <button type="button" class="btn btn-light dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <span class="sr-only">Toggle Dropdown</span>
+              </button>
+            <div class="dropdown-menu">
+                <a class="dropdown-item" href="chest_101.html">Chest</a>
+                <a class="dropdown-item" href="back_101.html">Back</a>
+                <a class="dropdown-item" href="legs_101.html">Legs</a>
+                <a class="dropdown-item" href="shoulders_101.html">Shoulders</a>
+                <a class="dropdown-item" href="arms_101.html">Arms</a>
+                <a class="dropdown-item" href="abs_101.html">Abdominals</a>
+              </div>
             </div>
+          </li>
+          <!-- CARDIO DROPDOWN BUTTON -->
+          <li class="nav-item dropdown">
+            <div class="btn-group">
+              <a class="btn btn-light" href="cardio_tangerine.html" role="button">Cardio</a>
+              <button type="button" class="btn btn-light dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <span class="sr-only">Toggle Dropdown</span>
+              </button>
+              <div class="dropdown-menu">
+                <a class="dropdown-item" href="treadmill.html">Treadmill</a>
+                <a class="dropdown-item" href="exercise_bike.html">Exercise Bike</a>
+                <a class="dropdown-item" href="elliptical.html">Elliptical</a>
+                <a class="dropdown-item" href="rowing.html">Rowing Machine</a>
+                <a class="dropdown-item" href="stairmaster.html">StairMaster</a>
+              </div>
+            </div>
+          </li>
+          <!-- HIIT DROPDOWN BUTTON -->
+          <li class="nav-item dropdown">
+            <div class="btn-group">
+              <a class="btn btn-light" href="hiit_tangerine.html" role="button">HIIT</a>
+              <button type="button" class="btn btn-light dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <span class="sr-only">Toggle Dropdown</span>
+              </button>
+              <div class="dropdown-menu">
+                <a class="dropdown-item" href="hiit_strength_101.html">Strength</a>
+                <a class="dropdown-item" href="hiit_fl_101.html">Fat Loss</a>
+              </div>
+            </div>
+          </li>
+          <!-- ABOUT BUTTON -->
+          <li class="nav-item">
+            <a class="btn btn-light" role="button" href="about_tangerine.html">About</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+    <!--  GRID BUTTONS -->
+    <div class="container">
+      <br><br><br>
+      <div class="row">
+        <div class="col-md-4">
+          <a class="btn btn-light btn-outline-primary btn-lg btn-block" href="arms_101.html" role="button">Arms 101</a>
         </div>
-    </body>
+        <div class="col-md-4">
+          <a class="btn btn-light btn-outline-primary btn-lg btn-block disabled" href="arms_102.html" role="button">Arms 102</a>
+        </div>
+        <div class="col-md-4">
+          <a class="btn btn-light btn-outline-primary btn-lg btn-block" href="arms_103.html" role="button">Arms 103</a>
+        </div>
+      </div>
+    </div><br><br>
+    <!-- BODY -->
+    <div class="container">
+      <div class="row justify-content-md-center">
+        <div class="col-md-10">
+          <div class="card border-light mb-3">
+            <div class="card-header text-center h5">Reverse Tricep Pushdown X Tricep Pushdowns</div>
+            <div class="card-body text-center">
+              <img src="reverse_tricep_pushdown.jpg" class="img-fluid" alt="Responsive image">
+              <img src="tricep_pushdown.jpg" class="img-fluid" alt="Responsive image">
+              <p><i>(3 sets |10x10, 10x10, 10x10)</i></p>
+              <p><u>Info</u>: There will be 3 sets. Focus on control and contraction. Keep the weight constant through all sets. This will be a mechanical drop set, meaning the weight and movement is the same but it will change to a stronger grip for the second part of the set. Perform the traditional pushdowns immediately after the set.</p>
+              <p><u>Form</u>:For the reverse tricep pushdowns, attach a straight bar to the cable and grab it with your palms facing upward. Keeping your elbows at your sides and holding the bar straight in front of you, push the bar downward to fully extend your arm and squeeze the triceps.</p>
+              <p>For the tricep pushdowns, attach a straight bar to the cable and grab it with your palms facing downward. Keeping your elbows at your sides and holding the bar straight in front of you, push the bar downward to fully extend your arm and squeeze the triceps.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="row justify-content-md-center">
+        <div class="col-md-10">
+          <div class="card border-light mb-3">
+            <div class="card-header text-center h5">Barbell Curls X Reverse Barbell Curls</div>
+            <div class="card-body text-center">
+              <img src="curls_bb.jpg" class="img-fluid" alt="Responsive image">
+              <img src="reverse_curl_bb.jpg" class="img-fluid" alt="Responsive image">
+              <p><i>(3 sets |10x10, 10x10, 10x10)</i></p>
+              <p><u>Info</u>: There will be 3 sets. Focus on control and contraction. Keep the weight constant through all sets but decrease the weight 10-15% for the reverse barbell curls. Perform these immediately after the traditional curls.</p>
+              <p><u>Form</u>: For the barbell curls, grab the bar about shoulder width apart with your palms facing outward. Keeping your elbows at your sides, bend at the elbow and bring the bar toward your chest and squeeze the bicep at the top.</p>
+              <p>For the reverse barbell curls, grab the bar about shoulder width apart with your palms facing inward. Keeping your elbows at your sides, bend at the elbow and bring the bar toward your chest and squeeze the bicep at the top.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="row justify-content-md-center">
+        <div class="col-md-10">
+          <div class="card border-light mb-3">
+            <div class="card-header text-center h5">EZ-Bar Skull Crushers X Dumbbell Hammer Curls</div>
+            <div class="card-body text-center">
+              <img src="skullcrusher_ez.jpg" class="img-fluid" alt="Responsive image">
+              <img src="hammer_curls.jpg" class="img-fluid" alt="Responsive image">
+              <p><i>(4 sets |12x12, 12x12, 10x10, 10x10)</i></p>
+              <p><u>Info</u>: There will be 4 sets. Focus on control and contraction. Increase the weight and decrease the reps each set after the second set. Perform the hammer curls on both arms simultaneously and immediately after the skullcrushers.</p>
+              <p><u>Form</u>: For the skull crushers, grab the easy curl bar on the closer portion of the bend. On a flat or incline bench, extend your arms so they are straight up. Keeping your elbows in place, lower the bar slightly above your forehead and the extend straight.</p>
+              <p>For the hammer curls, grab the dumbells and hold them at your sides with your palms facing each other. Keeping your elbow at your side, curl the bar up and keep your palms facing each other.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
 </html>
