--- a/arms_103.html
+++ b/arms_103.html
@@ -1,110 +1,171 @@
-<html>
-    <head>
-        <title>Tangerine Fit</title>
-        <link rel="stylesheet" type="text/css" href="css_tangerine.css"/>
-    </head>
-    <body>
-        <div id="container">
-            <div id="header">
-                <b id="name"><font size = "+5">TF</font></b>
-                <ul>
-                    <li><a class="" href="home_tangerine.html">Home</a></li>
-                    <li><a class="selected" href="weightlifting_tangerine.html">Weightlifting</a></li>
-                    <li><a class="" href="cardio_tangerine.html">Cardio</a></li>
-                    <li><a class="" href="hiit_tangerine.html">HIIT</a></li>
-                    <li><a class="" href="about_tangerine.html">About</a></li>
-                </ul>
-            </div>
-            <div>
-                <div id="nav">
-                    <h2 align="center" id="header_nav">Workout Routines</h2>
-                    <ul id="nav_ul">
-                        <h3><ah class="" href="">Chest</ah></h3>
-                        <li><a class="" href="chest_101.html">-  Chest 101</a></li>
-                        <li><a class="" href="chest_102.html">-  Chest 102</a></li>
-                        <li><a class="" href="chest_103.html">-  Chest 103</a></li>
-                        <h3><ah class="" href="">Back</ah></h3>
-                        <li><a class="" href="back_101.html">-  Back 101</a></li>
-                        <li><a class="" href="back_102.html">-  Back 102</a></li>
-                        <li><a class="" href="back_103.html">-  Back 103</a></li>
-                        <h3><ah class="" href="">Legs</ah></h3>
-                        <li><a class="" href="legs_101.html">-  Legs 101</a></li>
-                        <li><a class="" href="legs_102.html">-  Legs 102</a></li>
-                        <li><a class="" href="legs_103.html">-  Legs 103</a></li>
-                        <h3><ah class="" href="">Shoulders</ah></h3>
-                        <li><a class="" href="shoulders_101.html">-  Shoulders 101</a></li>
-                        <li><a class="" href="shoulders_102.html">-  Shoulders 102</a></li>
-                        <li><a class="" href="shoulders_103.html">-  Shoulders 103</a></li>
-                        <h3><ah class="" href="">Arms</ah></h3>
-                        <li><a class="" href="arms_101.html">-  Arms 101</a></li>
-                        <li><a class="" href="arms_102.html">-  Arms 102</a></li>
-                        <li><a class="" href="arms_103.html">-  Arms 103</a></li>
-                        <h3><ah class="" href="">Abdominals</ah></h3>
-                        <li><a class="" href="abs_101.html">-  Abdominals 101</a></li>
-                        <li><a class="" href="abs_102.html">-  Abdominals 102</a></li>
-                        <li><a class="" href="abs_103.html">-  Abdominals 103</a></li>
-                    </ul>
-                </div>
-                <div id="main_info">
-                    <div id="main_info_header">
-                        <h2 align="center">Arms 103</h2>
-                    </div>
-                    <div id="routine">
-                        <div id="picture">
-                            <img src="curls_ez.jpg" alt="EZ-Bar Buddy Curls">
-                        </div>
-                        <div id="routine_exercise">
-                            <h4><exerciseHead>EZ-Bar Buddy Curls</exerciseHead></h4>
-                            <p><i>(1 set |15-12-10-8-6-4-2)</i></p>
-                            <p><u>Info</u>: There will be 1 set. Focus on control and contraction. Choose a weight attainable for 15 reps. After completing the reps, pass the bar to a buddy and then take the bar back when your buddy is done and drop the number of reps for the next set. If you are alone, set the bar down and rest for the amount of reps counted in seconds.</p>
-                            <p><u>Form</u>: Grab the bar on the outer portion of the EZ bar. Keeping your elbows in the same position at your sides, curl the bar upward until it nearly touches your chest. Return it to the starting position.</p>
-                        </div>
-                        <div id="picture">
-                            <img src="skullcrusher_ez.jpg" alt="EZ-Bar Skullcrusher">
-                        </div>
-                        <div id="routine_exercise">
-                            <h4><exerciseHead>EZ-Bar Skullcrusher</exerciseHead></h4>
-                            <p><i>(4 sets |15, 10, 5, 10)</i></p>
-                            <p><u>Info</u>: There will be 4 sets. Focus on control and contraction. Increase the weight 10-15% and decrease the reps for the first 3 sets. Add 10-15% back on for the final set.</p>
-                            <p><u>Form</u>: Grab the easy curl bar on the closer portion of the bend. On a flat or incline bench, extend your arms so they are straight up. Keeping your elbows in place, lower the bar slightly above your forehead and the extend straight.</p>
-                        </div>
-                        <div id="picture">
-                            <img src="curls_preacher_db.jpg" alt="Single Arm Preacher Curls">
-                        </div>
-                        <div id="routine_exercise">
-                            <h4><exerciseHead>Single Arm Preacher Curls</exerciseHead></h4>
-                            <p><i>(3 sets |10, 5, 5)</i></p>
-                            <p><u>Info</u>: There will be 3 sets. Focus on control and contraction. Increase the weight 15-20% and decrease the reps after the first set. </p>
-                            <p><u>Form</u>: Place your arm on a preacher curl pad. Keeping the upper part of your triceps on the pad and positioning yourself so that your armpits are touching the pad, curl the bar upward toward your body. Perform one arm at a time.</p>
-                        </div>
-                        <div id="picture">
-                            <img src="skullcrushers_db.jpg" alt="Flat Bench Dumbbell Skull Crushers ">
-                        </div>
-                        <div id="routine_exercise">
-                            <h4><exerciseHead>Flat Bench Dumbbell Skull Crushers </exerciseHead></h4>
-                            <p><i>(3 sets |15-10, 15-10, 15-10)</i></p>
-                            <p><u>Info</u>: There will be 3 sets. Focus on control and contraction. Perform the first part of the set doing traditional skullcrusher reps with one arm. For the second part, turn your hand inward 90 degrees and perform the rest of the set doing reps across your body.</p>
-                            <p><u>Form</u>: Grab the dumbbells and extend them straight above you with your palms facing inward. Keeping your elbows in place, lower the dumbbells until they nearly touch your shoulder before extending them back to the starting position.</p>
-                        </div>
-                        <div id="picture">
-                            <img src="curls_concentration_rp.jpg" alt="High-Cable Concentration Curls">
-                            <img src="tricep_overhead_extension_rp.jpg" alt="Overhead Cable Tricep Extensions">
-                        </div>
-                        <div id="routine_exercise">
-                            <h4><exerciseHead>High-Cable Concentration Curls X Overhead Cable Tricep Extensions</exerciseHead></h4>
-                            <p><i>(3 sets |10/10xAMRAP, 10/10xAMRAP, 10/10xAMRAP)</i></p>
-                            <p><u>Info</u>: There will be 3 sets. Focus on control and contraction. For the curls, perform 10 reps with a 1-count up, 1-count squeeze, and 3-count negative tempo. Then perform 10 reps with a 1-count up 1-count negative tempo. Finish the set by performing the tricep extensions for as many reps as possible using the same weight.</p>
-                            <p><u>Form</u>: For the curls, grab a rope and position it at the top of the cable. Lean slightly backwards and grab the rope with your palms facing each other. Keeping your arms in front of you and elbows in place, curl the rope towards you to squeeze the biceps.</p>
-                            <p>For the extensions, leave the rope at the top of the cable. Turn around and extend the rope so it is above your head and in front of you. Keep your elbows in place and allow the rope to nearly touch the top of your head before extending your arms back to the start.</p>
-                        </div>
-                    </div>
-                    
-                </div>
-            </div>
+<!doctype html>
+<html lang="en">
 
-            <div id = "footer">
-                Copyright &copy; 2019 Tangerine Fit.
+    <head>
+      <meta charset="utf-8">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge">
+      <meta name="viewpoint" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+      <title>Tagnerine Fit</title>
+      <!-- BOOTSTRAP -->
+      <link href="css/bootstrap.min.css" rel="stylesheet">
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.6/umd/popper.min.js"></script>
+      <script src="js/bootstrap.min.js"></script>
+    </head>
+
+    <!-- NAVIGATION BAR -->
+    <nav class="navbar navbar-expand-lg fixed-top navbar-light" style="background-color: #fd7e14;">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <a class="navbar-brand text-light" href="home_tangerine.html">Tangerine Fit</a>
+      <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
+        <ul class="navbar-nav">
+          <!-- HOME BUTTON -->
+          <li class="nav-item">
+            <a class="btn btn-light" role="button" href="home_tangerine.html">Home</a>
+          </li>
+          <!-- WEIGHTLIFTING DROPDOWN BUTTON -->
+          <li class="nav-item dropdown">
+            <div class="btn-group">
+              <a class="btn btn-light" href="weightlifting_tangerine.html" role="button">Weightlifting</a>
+              <button type="button" class="btn btn-light dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <span class="sr-only">Toggle Dropdown</span>
+              </button>
+            <div class="dropdown-menu">
+                <a class="dropdown-item" href="chest_101.html">Chest</a>
+                <a class="dropdown-item" href="back_101.html">Back</a>
+                <a class="dropdown-item" href="legs_101.html">Legs</a>
+                <a class="dropdown-item" href="shoulders_101.html">Shoulders</a>
+                <a class="dropdown-item" href="arms_101.html">Arms</a>
+                <a class="dropdown-item" href="abs_101.html">Abdominals</a>
+              </div>
             </div>
+          </li>
+          <!-- CARDIO DROPDOWN BUTTON -->
+          <li class="nav-item dropdown">
+            <div class="btn-group">
+              <a class="btn btn-light" href="cardio_tangerine.html" role="button">Cardio</a>
+              <button type="button" class="btn btn-light dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <span class="sr-only">Toggle Dropdown</span>
+              </button>
+              <div class="dropdown-menu">
+                <a class="dropdown-item" href="treadmill.html">Treadmill</a>
+                <a class="dropdown-item" href="exercise_bike.html">Exercise Bike</a>
+                <a class="dropdown-item" href="elliptical.html">Elliptical</a>
+                <a class="dropdown-item" href="rowing.html">Rowing Machine</a>
+                <a class="dropdown-item" href="stairmaster.html">StairMaster</a>
+              </div>
+            </div>
+          </li>
+          <!-- HIIT DROPDOWN BUTTON -->
+          <li class="nav-item dropdown">
+            <div class="btn-group">
+              <a class="btn btn-light" href="hiit_tangerine.html" role="button">HIIT</a>
+              <button type="button" class="btn btn-light dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <span class="sr-only">Toggle Dropdown</span>
+              </button>
+              <div class="dropdown-menu">
+                <a class="dropdown-item" href="hiit_strength_101.html">Strength</a>
+                <a class="dropdown-item" href="hiit_fl_101.html">Fat Loss</a>
+              </div>
+            </div>
+          </li>
+          <!-- ABOUT BUTTON -->
+          <li class="nav-item">
+            <a class="btn btn-light" role="button" href="about_tangerine.html">About</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+    <!--  GRID BUTTONS -->
+    <div class="container">
+      <br><br><br>
+      <div class="row">
+        <div class="col-md-4">
+          <a class="btn btn-light btn-outline-primary btn-lg btn-block" href="arms_101.html" role="button">Arms 101</a>
         </div>
-    </body>
+        <div class="col-md-4">
+          <a class="btn btn-light btn-outline-primary btn-lg btn-block" href="arms_102.html" role="button">Arms 102</a>
+        </div>
+        <div class="col-md-4">
+          <a class="btn btn-light btn-outline-primary btn-lg btn-block disabled" href="arms_103.html" role="button">Arms 103</a>
+        </div>
+      </div>
+    </div><br><br>
+    <!-- BODY -->
+    <div class="container">
+      <div class="row justify-content-md-center">
+        <div class="col-md-10">
+          <div class="card border-light mb-3">
+            <div class="card-header text-center h5">EZ-Bar Buddy Curls</div>
+            <div class="card-body text-center">
+              <img src="curls_ez.jpg" class="img-fluid" alt="Responsive image">
+              <p><i>(1 set |15-12-10-8-6-4-2)</i></p>
+              <p><u>Info</u>: There will be 1 set. Focus on control and contraction. Choose a weight attainable for 15 reps. After completing the reps, pass the bar to a buddy and then take the bar back when your buddy is done and drop the number of reps for the next set. If you are alone, set the bar down and rest for the amount of reps counted in seconds.</p>
+              <p><u>Form</u>: Grab the bar on the outer portion of the EZ bar. Keeping your elbows in the same position at your sides, curl the bar upward until it nearly touches your chest. Return it to the starting position.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="row justify-content-md-center">
+        <div class="col-md-10">
+          <div class="card border-light mb-3">
+            <div class="card-header text-center h5">EZ-Bar Skullcrusher</div>
+            <div class="card-body text-center">
+              <img src="skullcrusher_ez.jpg" class="img-fluid" alt="Responsive image">
+              <p><i>(4 sets |15, 10, 5, 10)</i></p>
+              <p><u>Info</u>: There will be 4 sets. Focus on control and contraction. Increase the weight 10-15% and decrease the reps for the first 3 sets. Add 10-15% back on for the final set.</p>
+              <p><u>Form</u>: Grab the easy curl bar on the closer portion of the bend. On a flat or incline bench, extend your arms so they are straight up. Keeping your elbows in place, lower the bar slightly above your forehead and the extend straight.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="row justify-content-md-center">
+        <div class="col-md-10">
+          <div class="card border-light mb-3">
+            <div class="card-header text-center h5">Single Arm Preacher Curls</div>
+            <div class="card-body text-center">
+              <img src="curls_preacher_db.jpg" class="img-fluid" alt="Responsive image">
+              <p><i>(3 sets |10, 5, 5)</i></p>
+              <p><u>Info</u>: There will be 3 sets. Focus on control and contraction. Increase the weight 15-20% and decrease the reps after the first set.</p>
+              <p><u>Form</u>: Place your arm on a preacher curl pad. Keeping the upper part of your triceps on the pad and positioning yourself so that your armpits are touching the pad, curl the bar upward toward your body. Perform one arm at a time.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="row justify-content-md-center">
+        <div class="col-md-10">
+          <div class="card border-light mb-3">
+            <div class="card-header text-center h5">Flat Bench Dumbbell Skull Crushers</div>
+            <div class="card-body text-center">
+              <img src="skullcrushers_db.jpg" class="img-fluid" alt="Responsive image">
+              <p><i>(3 sets |15-10, 15-10, 15-10)</i></p>
+              <p><u>Info</u>: There will be 3 sets. Focus on control and contraction. Perform the first part of the set doing traditional skullcrusher reps with one arm. For the second part, turn your hand inward 90 degrees and perform the rest of the set doing reps across your body.</p>
+              <p><u>Form</u>: Grab the dumbbells and extend them straight above you with your palms facing inward. Keeping your elbows in place, lower the dumbbells until they nearly touch your shoulder before extending them back to the starting position.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="row justify-content-md-center">
+        <div class="col-md-10">
+          <div class="card border-light mb-3">
+            <div class="card-header text-center h5">High-Cable Concentration Curls X Overhead Cable Tricep Extensions</div>
+            <div class="card-body text-center">
+              <img src="curls_concentration_rp.jpg" class="img-fluid" alt="Responsive image">
+              <img src="tricep_overhead_extension_rp.jpg" class="img-fluid" alt="Responsive image">
+              <p><i>(3 sets |10/10xAMRAP, 10/10xAMRAP, 10/10xAMRAP)</i></p>
+              <p><u>Info</u>: There will be 3 sets. Focus on control and contraction. For the curls, perform 10 reps with a 1-count up, 1-count squeeze, and 3-count negative tempo. Then perform 10 reps with a 1-count up 1-count negative tempo. Finish the set by performing the tricep extensions for as many reps as possible using the same weight.</p>
+              <p><u>Form</u>: For the curls, grab a rope and position it at the top of the cable. Lean slightly backwards and grab the rope with your palms facing each other. Keeping your arms in front of you and elbows in place, curl the rope towards you to squeeze the biceps.</p>
+              <p>For the extensions, leave the rope at the top of the cable. Turn around and extend the rope so it is above your head and in front of you. Keep your elbows in place and allow the rope to nearly touch the top of your head before extending your arms back to the start.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
 </html>
