--- a/legs_102.html
+++ b/legs_102.html
@@ -1,101 +1,157 @@
-<html>
-    <head>
-        <title>Tangerine Fit</title>
-        <link rel="stylesheet" type="text/css" href="css_tangerine.css"/>
-    </head>
-    <body>
-        <div id="container">
-            <div id="header">
-                <b id="name"><font size = "+5">TF</font></b>
-                <ul>
-                    <li><a class="" href="home_tangerine.html">Home</a></li>
-                    <li><a class="selected" href="weightlifting_tangerine.html">Weightlifting</a></li>
-                    <li><a class="" href="cardio_tangerine.html">Cardio</a></li>
-                    <li><a class="" href="hiit_tangerine.html">HIIT</a></li>
-                    <li><a class="" href="about_tangerine.html">About</a></li>
-                </ul>
-            </div>
-            <div>
-                <div id="nav">
-                    <h2 align="center" id="header_nav">Workout Routines</h2>
-                    <ul id="nav_ul">
-                        <h3><ah class="" href="">Chest</ah></h3>
-                        <li><a class="" href="chest_101.html">-  Chest 101</a></li>
-                        <li><a class="" href="chest_102.html">-  Chest 102</a></li>
-                        <li><a class="" href="chest_103.html">-  Chest 103</a></li>
-                        <h3><ah class="" href="">Back</ah></h3>
-                        <li><a class="" href="back_101.html">-  Back 101</a></li>
-                        <li><a class="" href="back_102.html">-  Back 102</a></li>
-                        <li><a class="" href="back_103.html">-  Back 103</a></li>
-                        <h3><ah class="" href="">Legs</ah></h3>
-                        <li><a class="" href="legs_101.html">-  Legs 101</a></li>
-                        <li><a class="" href="legs_102.html">-  Legs 102</a></li>
-                        <li><a class="" href="legs_103.html">-  Legs 103</a></li>
-                        <h3><ah class="" href="">Shoulders</ah></h3>
-                        <li><a class="" href="shoulders_101.html">-  Shoulders 101</a></li>
-                        <li><a class="" href="shoulders_102.html">-  Shoulders 102</a></li>
-                        <li><a class="" href="shoulders_103.html">-  Shoulders 103</a></li>
-                        <h3><ah class="" href="">Arms</ah></h3>
-                        <li><a class="" href="arms_101.html">-  Arms 101</a></li>
-                        <li><a class="" href="arms_102.html">-  Arms 102</a></li>
-                        <li><a class="" href="arms_103.html">-  Arms 103</a></li>
-                        <h3><ah class="" href="">Abdominals</ah></h3>
-                        <li><a class="" href="abs_101.html">-  Abdominals 101</a></li>
-                        <li><a class="" href="abs_102.html">-  Abdominals 102</a></li>
-                        <li><a class="" href="abs_103.html">-  Abdominals 103</a></li>
-                    </ul>
-                </div>
-                <div id="main_info">
-                    <div id="main_info_header">
-                        <h2 align="center">Legs 102</h2>
-                    </div>
-                    <div id="routine">
-                        <div id="picture">
-                            <img src="squats.jpg" alt="Squats">
-                        </div>
-                        <div id="routine_exercise">
-                            <h4><exerciseHead>Squats</exerciseHead></h4>
-                            <p><i>(6 sets | 15, 12, 10, 8, 6, 4-10)</i></p>
-                            <p><u>Info</u>: There will be 6 sets. Focus on control and depth. Each set, increase the weight 10-15% and decrease the repetitions. For the final set, after completing the initial repetitions, decrease the weight 25-40% and complete the remaining repetitions.</p>
-                            <p><u>Form</u>: Place your feet just outside of a normal standing position. Point your toes at about a 30 degree angle outward. With an arch in your back, sit back so that the bar travels in a straight line as you squat. Lower yourself all the way until your glutes nearly touch your ankles. Make sure that your heels do not come off the ground and that you stay flat footed. Push through your heels to bring yourself back upward.</p>
-                        </div>
-                        <div id="picture">
-                            <img src="romanian_deadlift_bb.jpg" alt="Romanian Barbell Deadlifts">
-                        </div>
-                        <div id="routine_exercise">
-                            <h4><exerciseHead>Romanian Barbell Deadlifts</exerciseHead></h4>
-                            <p><i>(4 sets | 12, 10, 10, 8)</i></p>
-                            <p><u>Info</u>: There will be 4 sets. Start with a weight you can focus on control. Increase the weight 10-15% every set. </p>
-                            <p><u>Form</u>: Stand with a neutral stance. Bend over at the hips with an arched back in order to pick up the bar. Lean back slightly with the legs but keep them at about an 80 degree angle. Using the hamstrings and glutes, bring the bar up until you are standing straight. Lower the bar back down to the floor.</p>
-                        </div>
-                        <div id="picture">
-                            <img src="lunges_bb.jpg" alt="Barbell Lunges">
-                            <img src="good_morning_bb.jpg" alt="Good Mornings">
-                        </div>
-                        <div id="routine_exercise">
-                            <h4><exerciseHead>Barbell Lunges X Barbell Good Mornings</exerciseHead></h4>
-                            <p><i>(3 sets | 12x12, 10x10, 10x10)</i></p>
-                            <p><u>Info</u>: There will be 3 sets. Start with a weight you can focus on control for higher repetitions. Keep the weight constant throughout. Perform the barbell lunges first and the good mornings immediately after.</p>
-                            <p><u>Form</u>: For lunges, with a barbell on your back, take one step back so that you are able to lower yourself so that your back knee touches the ground. Step back far enough so that your shin stays straight. Using your quads, return yourself so that both feet are next to each other. Repeat on the other leg to complete one rep.</p>
-                            <p>For good mornings, keep the barbell on your back. Lean forward, bending at the hips and keeping your legs at about an 80 degree angle, until your torso is about parallel with the ground. Keep your back arched and then return to the starting position.</p>
-                        </div>
-                        <div id="picture">
-                            <img src="calf_raise_standing.jpg" alt="Calf Raises Standing">
-                        </div>
-                        <div id="routine_exercise">
-                            <h4><exerciseHead>Calf Raises</exerciseHead></h4>
-                            <p><i>(4 sets | 15, 15, 12, 12)</i></p>
-                            <p><u>Info</u>: There will be 5 sets. Start with a weight you can focus on control for higher repetitions. After 3 sets, increase the weight 15-20% and lower the repetitions for the remaining 2 sets.</p>
-                            <p><u>Form</u>: Standing on an elevated surface so that your heels are hanging off the step, lower your heels so that it stretches the calves. Flex your calves and move so that you’re standing on your tippy-toes to contract the calves. Lower yourself slowly back to the starting position.</p>
-                        </div>
-                    </div>
-                    
-                </div>
-            </div>
+<!doctype html>
+<html lang="en">
 
-            <div id = "footer">
-                Copyright &copy; 2019 Tangerine Fit.
+    <head>
+      <meta charset="utf-8">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge">
+      <meta name="viewpoint" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+      <title>Tagnerine Fit</title>
+      <!-- BOOTSTRAP -->
+      <link href="css/bootstrap.min.css" rel="stylesheet">
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.6/umd/popper.min.js"></script>
+      <script src="js/bootstrap.min.js"></script>
+    </head>
+
+    <!-- NAVIGATION BAR -->
+    <nav class="navbar navbar-expand-lg fixed-top navbar-light" style="background-color: #fd7e14;">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <a class="navbar-brand text-light" href="home_tangerine.html">Tangerine Fit</a>
+      <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
+        <ul class="navbar-nav">
+          <!-- HOME BUTTON -->
+          <li class="nav-item">
+            <a class="btn btn-light" role="button" href="home_tangerine.html">Home</a>
+          </li>
+          <!-- WEIGHTLIFTING DROPDOWN BUTTON -->
+          <li class="nav-item dropdown">
+            <div class="btn-group">
+              <a class="btn btn-light" href="weightlifting_tangerine.html" role="button">Weightlifting</a>
+              <button type="button" class="btn btn-light dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <span class="sr-only">Toggle Dropdown</span>
+              </button>
+            <div class="dropdown-menu">
+                <a class="dropdown-item" href="chest_101.html">Chest</a>
+                <a class="dropdown-item" href="back_101.html">Back</a>
+                <a class="dropdown-item" href="legs_101.html">Legs</a>
+                <a class="dropdown-item" href="shoulders_101.html">Shoulders</a>
+                <a class="dropdown-item" href="arms_101.html">Arms</a>
+                <a class="dropdown-item" href="abs_101.html">Abdominals</a>
+              </div>
             </div>
+          </li>
+          <!-- CARDIO DROPDOWN BUTTON -->
+          <li class="nav-item dropdown">
+            <div class="btn-group">
+              <a class="btn btn-light" href="cardio_tangerine.html" role="button">Cardio</a>
+              <button type="button" class="btn btn-light dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <span class="sr-only">Toggle Dropdown</span>
+              </button>
+              <div class="dropdown-menu">
+                <a class="dropdown-item" href="treadmill.html">Treadmill</a>
+                <a class="dropdown-item" href="exercise_bike.html">Exercise Bike</a>
+                <a class="dropdown-item" href="elliptical.html">Elliptical</a>
+                <a class="dropdown-item" href="rowing.html">Rowing Machine</a>
+                <a class="dropdown-item" href="stairmaster.html">StairMaster</a>
+              </div>
+            </div>
+          </li>
+          <!-- HIIT DROPDOWN BUTTON -->
+          <li class="nav-item dropdown">
+            <div class="btn-group">
+              <a class="btn btn-light" href="hiit_tangerine.html" role="button">HIIT</a>
+              <button type="button" class="btn btn-light dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <span class="sr-only">Toggle Dropdown</span>
+              </button>
+              <div class="dropdown-menu">
+                <a class="dropdown-item" href="hiit_strength_101.html">Strength</a>
+                <a class="dropdown-item" href="hiit_fl_101.html">Fat Loss</a>
+              </div>
+            </div>
+          </li>
+          <!-- ABOUT BUTTON -->
+          <li class="nav-item">
+            <a class="btn btn-light" role="button" href="about_tangerine.html">About</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+    <!--  GRID BUTTONS -->
+    <div class="container">
+      <br><br><br>
+      <div class="row">
+        <div class="col-md-4">
+          <a class="btn btn-light btn-outline-primary btn-lg btn-block" href="legs_101.html" role="button">Legs 101</a>
         </div>
-    </body>
+        <div class="col-md-4">
+          <a class="btn btn-light btn-outline-primary btn-lg btn-block disabled" href="legs_102.html" role="button">Legs 102</a>
+        </div>
+        <div class="col-md-4">
+          <a class="btn btn-light btn-outline-primary btn-lg btn-block" href="legs_103.html" role="button">Legs 103</a>
+        </div>
+      </div>
+    </div><br><br>
+    <!-- BODY -->
+    <div class="container">
+      <div class="row justify-content-md-center">
+        <div class="col-md-10">
+          <div class="card border-light mb-3">
+            <div class="card-header text-center h5">Squats</div>
+            <div class="card-body text-center">
+              <img src="squats.jpg" class="img-fluid" alt="Responsive image">
+              <p><i>(6 sets | 15, 12, 10, 8, 6, 4-10)</i></p>
+              <p><u>Info</u>: There will be 6 sets. Focus on control and depth. Each set, increase the weight 10-15% and decrease the repetitions. For the final set, after completing the initial repetitions, decrease the weight 25-40% and complete the remaining repetitions.</p>
+              <p><u>Form</u>: Place your feet just outside of a normal standing position. Point your toes at about a 30 degree angle outward. With an arch in your back, sit back so that the bar travels in a straight line as you squat. Lower yourself all the way until your glutes nearly touch your ankles. Make sure that your heels do not come off the ground and that you stay flat footed. Push through your heels to bring yourself back upward.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="row justify-content-md-center">
+        <div class="col-md-10">
+          <div class="card border-light mb-3">
+            <div class="card-header text-center h5">Romanian Barbell Deadlifts</div>
+            <div class="card-body text-center">
+              <img src="romanian_deadlift_bb.jpg" class="img-fluid" alt="Responsive image">
+              <p><i>(4 sets | 12, 10, 10, 8)</i></p>
+              <p><u>Info</u>: There will be 4 sets. Start with a weight you can focus on control. Increase the weight 10-15% every set.</p>
+              <p><u>Form</u>: Stand with a neutral stance. Bend over at the hips with an arched back in order to pick up the bar. Lean back slightly with the legs but keep them at about an 80 degree angle. Using the hamstrings and glutes, bring the bar up until you are standing straight. Lower the bar back down to the floor.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="row justify-content-md-center">
+        <div class="col-md-10">
+          <div class="card border-light mb-3">
+            <div class="card-header text-center h5">Barbell Lunges X Barbell Good Mornings</div>
+            <div class="card-body text-center">
+              <img src="lunges_bb.jpg" class="img-fluid" alt="Responsive image">
+              <img src="good_morning_bb.jpg" class="img-fluid" alt="Responsive image">
+              <p><i>(3 sets | 12x12, 10x10, 10x10)</i></p>
+              <p><u>Info</u>: There will be 3 sets. Start with a weight you can focus on control for higher repetitions. Keep the weight constant throughout. Perform the barbell lunges first and the good mornings immediately after.</p>
+              <p><u>Form</u>: For lunges, with a barbell on your back, take one step back so that you are able to lower yourself so that your back knee touches the ground. Step back far enough so that your shin stays straight. Using your quads, return yourself so that both feet are next to each other. Repeat on the other leg to complete one rep.</p>
+              <p>For good mornings, keep the barbell on your back. Lean forward, bending at the hips and keeping your legs at about an 80 degree angle, until your torso is about parallel with the ground. Keep your back arched and then return to the starting position.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="row justify-content-md-center">
+        <div class="col-md-10">
+          <div class="card border-light mb-3">
+            <div class="card-header text-center h5">Calf Raises</div>
+            <div class="card-body text-center">
+              <img src="calf_raise_standing.jpg" class="img-fluid" alt="Responsive image">
+              <p><i>(4 sets | 15, 15, 12, 12)</i></p>
+              <p><u>Info</u>: There will be 5 sets. Start with a weight you can focus on control for higher repetitions. After 3 sets, increase the weight 15-20% and lower the repetitions for the remaining 2 sets.</p>
+              <p><u>Form</u>: Standing on an elevated surface so that your heels are hanging off the step, lower your heels so that it stretches the calves. Flex your calves and move so that you’re standing on your tippy-toes to contract the calves. Lower yourself slowly back to the starting position.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
 </html>
